# flow

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust_ci.yml
src/: main.rs
vellum-app/: Cargo.toml
vellum-app/src/: actions.rs  application.rs  default_keybinds.toml  lib.rs
vellum-core/: Cargo.toml
vellum-core/src/: cursor.rs  document.rs  editor.rs  lib.rs
vellum-gui/: Cargo.toml
vellum-tests/: Cargo.toml
vellum-tui/: Cargo.toml
vellum-tui/src/: main.rs  tui.rs
