[package]
name = "vellum-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
vellum-core = { path = "../vellum-core" }
crossterm.workspace = true
keybinds.workspace = true
toml.workspace = true
serde.workspace = true